# SynchroPMU

./: .gitignore  CMakeLists.txt  LICENCE  LICENSE  Mclass.c  Mclassold.c  README.md  build.sh  iter_e_ipdft_imp.c  iter_e_ipdft_imp.h  main.c  pmu_estimator.c  pmu_estimator.h
config/: config.ini  m_class_config.ini  p_class_config.ini
examples/: Makefile  config_example.ini  example_config.ini  simple_example.c  simple_example2.c  simple_pmu.c
python/: pmu_estimator.py  setup.py
python/examples/: example_multiple_instances.py  example_usage.py
scripts/: process_after_build.py  process_header.py
src/: func_stubs.h  pmu_estimator.c  pmu_estimator.h
test/: Makefile  test.c  test2.c
